Bugfix 5035 - New UI: When resized, two rows of buttons poorly aligned/spaced

--- a/Website/Composite/styles/default/toolbars/toolbars-base.less
+++ b/Website/Composite/styles/default/toolbars/toolbars-base.less
@@ -3,7 +3,6 @@ ui|toolbar {
     clear: both;
     white-space: nowrap;
     box-shadow: inset 0px -1px 0px 0px rgba(204, 204, 204, 1);
-    border: 0px;
     padding: 15px 20px;
 
     &.dark {
@@ -72,8 +71,8 @@ ui|toolbar.btns-group {
     ui|toolbargroup {
         border: 1px solid @base-border-color;
         border-radius: 3px;
-        margin: 0px 5px 0px 5px;
-        padding: 0px;
+        margin: 4px 5px;
+        padding: 0;
         overflow: hidden;
 
         &:empty {
@@ -82,7 +81,7 @@ ui|toolbar.btns-group {
 
         ui|toolbarbutton {
             border-color: transparent;
-            margin: 0px;
+            margin: 0;
             border-radius: 0;
             text-transform: none;
 
